--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "t",
+  "name": "t-cli",
   "version": "1.0.1",
   "description": "t-base cli",
   "main": "index.js",
   "preferGlobal": true,
-  "bin": "./index.js",
+  "bin": {
+    "t": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "keywords": [],
-  "author": "louismelo",
+  "author": "louismelo <jsyzliuxb0918@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
@@ -19,6 +21,7 @@
     "figlet": "^1.5.2",
     "inquirer": "^8.1.2",
     "lodash": "^4.17.21",
-    "lowdb": "^2.1.0"
+    "lowdb": "^2.1.0",
+    "tty-table": "^4.1.5"
   }
 }
